Added styling to header, footer, and title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-     <title>EC: Branch, Pull, Merge, Delete</title>
-  <meta charset="utf-8" />
-  <meta name="robots" content="noindex,nofollow" />
-  <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/nav.css" />
+  <head>
+    <title>EC: Branch, Pull, Merge, Delete</title>
+    <meta charset="utf-8" />
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <style>
     /*
     .hamlet{
@@ -18,17 +21,18 @@
     }
 
   </style>
- </head>
- <body>
-     <header>
-     <h1>Branch, Pull, Merge, Delete</h1>
-     <h2>By Noah B, Bezza Z, Oliver W</h2>
-        <nav class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Home</a>
-            <a href="#" target="_blank">An IT 211 Extra Credit Opportunity</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-        </nav>
-     </header>
+  </head>
+  <body>
+    <header>
+
+      <nav class="topnav" id="myTopnav">
+          <a href="index.html" class="active">Home</a>
+          <a href="https://canvas.seattlecolleges.edu/courses/20255/assignments/353551?module_item_id=937333" target="_blank">An IT 211 Extra Credit Opportunity</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      </nav>
+      <h1>Branch, Pull, Merge, Delete</h1>
+      <h2>By Noah B, Bezza Z, Oliver W</h2>
+    </header>
      
    <main class="wrapper">
     <div id="play">
@@ -48,7 +52,7 @@
       <p><span 
         data-actor="Narrator" >Narrator: You don't have to go home, but you can't stay here! </span></p>
     </div>
-
+  </main>
 
     <footer>
       <p><small>&copy; 2021 by 
@@ -57,7 +61,7 @@
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
     </footer>
-  </main>
+  
   <script src="js/main.js"></script>
   <script src="js/story.js"></script>
 </body>
