fixed the text on one of the lines

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p><span 
       data-actor="Next">Next: </span></p>
       <p><span 
-      data-actor="Narrator">Narrator: The end! you don't have to go home, but you can't stay here! </span></p>
+      data-actor="Narrator">Narrator: The end!</span></p>
       <div>
         ...
       </div>
