adding a line(s) for Marcella and added a speaking line, also removed a line from Readme

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
       <p><span data-actor="Noah">Noah: </span>His name was Baldy, and he had a passion for web development. He wanted to create the best websites and applications that would make an impact on the world. He enrolled in Year Up, an organization that provides opportunities to young adults to gain skills and experience for their future career paths. He was very excited to learn more and more and see his growth later in the future. 
       </p>
+      <p><span data-actor="Oliver">Oliver: Baldy sure does seem like a great person with a bright future ahead of them! Where do they live and what city do they hail from?</span></p>
+      <p><span data-actor="Marcella">Marcella: </span></p>
       <p><span data-actor="Bezza">Bezza: </span></p>
       <p><span data-actor="Oliver">Oliver: </span></p>
       <p><span 
