added line for Bezza, added Marcella name to index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
       </nav>
       <h1>Branch, Pull, Merge, Delete</h1>
-      <h2>By Noah B, Bezza Z, Oliver W</h2>
+      <h2>By Noah B, Bezza Z, Oliver W, Marcella T</h2>
     </header>
      
    <main class="wrapper">
@@ -42,7 +42,7 @@
       </p>
       <p><span data-actor="Oliver">Oliver: Baldy sure does seem like a great person with a bright future ahead of them! Where do they live and what city do they hail from?</span></p>
       <p><span data-actor="Marcella">Marcella: Marcella: Wow, I can see Baldy making their mark one line at a time! I'd be happy to work with them in the future. </span></p>
-      <p><span data-actor="Bezza">Bezza: </span></p>
+      <p><span data-actor="Bezza">Bezza: I Hear Baldy comes from the great land of Baldistan. A Place where many great programmers are born! </span></p>
       <p><span data-actor="Oliver">Oliver: </span></p>
       <p><span 
       data-actor="Next">Next: </span></p>
@@ -60,7 +60,7 @@
 
     <footer>
       <p><small>&copy; 2021 by 
-        Noah B, Bezza Z, Oliver W, All Rights Reserved ~ 
+        Noah B, Bezza Z, Oliver W, Marcella T All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
