put final touches on story

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <p><span data-actor="Oliver">Oliver: Baldy sure does seem like a great person with a bright future ahead of them! Where do they live and what city do they hail from?</span></p>
       <p><span data-actor="Marcella">Marcella: Marcella: Wow, I can see Baldy making their mark one line at a time! I'd be happy to work with them in the future. </span></p>
       <p><span data-actor="Bezza">Bezza: I Hear Baldy comes from the great land of Baldistan. A Place where many great programmers are born! </span></p>
-      <p><span data-actor="Oliver">Oliver: </span></p>
+      <p><span data-actor="Oliver">Oliver: Blady ended up living happily ever after. </span></p>
       <p><span 
-      data-actor="Next">Next: </span></p>
+      data-actor="Narrator">Narrator:Though there was that one time he saved the world from vampires and werewolves. </span></p>
       <p><span 
-      data-actor="Next">Next: </span></p>
+      data-actor="Narrator 2">Narrator 2: Yeah there was that one time Baldy did that too. </span></p>
       <p><span 
       data-actor="Narrator">Narrator: The end!</span></p>
       <div>
